--- a/examples/testcrd.yaml
+++ b/examples/testcrd.yaml
@@ -1,54 +1,105 @@
-# 定义自定义的 MyCrdTest 资源
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  # 名字必需与下面的 spec 字段匹配，并且格式为 '<名称的复数形式>.<组名>'
-  name: students.test.geely.com
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.6.2
+  creationTimestamp: null
+  name: providers.terraform.core.oam.dev
 spec:
-   # 组名称，用于 REST API: /apis/<组>/<版本>
-  group: test.geely.com
+  group: terraform.core.oam.dev
   names:
-    # 名称的复数形式，用于 URL：/apis/<组>/<版本>/<名称的复数形式>
-   plural: students
-    # 名称的单数形式，作为命令行使用时和显示时的别名
-   singular: student
-    # kind 通常是单数形式的驼峰命名（CamelCased）形式。你的资源清单会使用这一形式。
-   kind: Student
-    # shortNames 允许你在命令行使用较短的字符串来匹配资源
-   shortNames:
-     - stu
-  # 可以是 Namespaced 或 Cluster
+    kind: Provider
+    listKind: ProviderList
+    plural: providers
+    singular: provider
   scope: Namespaced
   versions:
-    - name: v1
-      # 每个版本都可以通过服务标志启用/禁用。
-      served: true
-      # 必须将一个且只有一个版本标记为存储版本。
-      storage: true
-      schema:
-        openAPIV3Schema:
-          type: object
-          properties:
-            #自定义CRD中的spec
-            spec:
-              type: object
-              properties:
-                # 自定义的资源spec 中的属性 name
-                name:
-                  type: string
-                # 自定义的资源spec 中的属性 test_array
-                test_array:
-                  type: array
-                  items:
+  - additionalPrinterColumns:
+    - jsonPath: .status.state
+      name: STATE
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: AGE
+      type: date
+    name: v1beta1
+    schema:
+      openAPIV3Schema:
+        description: Provider is the Schema for the providers API.
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: ProviderSpec defines the desired state of Provider.
+            properties:
+              credentials:
+                description: Credentials required to authenticate to this provider.
+                properties:
+                  secretRef:
+                    description: A SecretRef is a reference to a secret key that contains
+                      the credentials that must be used to connect to the provider.
+                    properties:
+                      key:
+                        description: The key to select.
+                        type: string
+                      name:
+                        description: Name of the secret.
+                        type: string
+                      namespace:
+                        description: Namespace of the secret.
+                        type: string
+                    required:
+                    - key
+                    - name
+                    type: object
+                  source:
+                    description: Source of the provider credentials.
+                    enum:
+                    - None
+                    - Secret
+                    - InjectedIdentity
+                    - Environment
+                    - Filesystem
                     type: string
-                # 自定义的资源spec 中的属性 stu_number
-                stu_number:
-                  type: integer
-              #自定义CRD中的status
-            status:
-              type: object
-              properties:
-                test_status:
-                  type: string
-                test_ip:
-                  type: string
+                required:
+                - source
+                type: object
+              provider:
+                description: Provider is the cloud service provider, like `alibaba`
+                type: string
+              region:
+                description: Region is cloud provider's region
+                type: string
+            required:
+            - credentials
+            - provider
+            type: object
+          status:
+            description: ProviderStatus defines the observed state of Provider.
+            properties:
+              message:
+                type: string
+              state:
+                description: ProviderState is the type for Provider state
+                type: string
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
