--- a/examples/provider-crd.yaml
+++ b/examples/provider-crd.yaml
@@ -24,7 +24,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: Provider is the Schema for the providers API.
+        description: "Provider is the Schema for the providers API."
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
