--- a/examples/provider-crd.yaml
+++ b/examples/provider-crd.yaml
@@ -24,45 +24,31 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: "Provider is the Schema for the providers API."
+        description: Provider is the Schema for the providers API.
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
             type: string
           metadata:
             type: object
           spec:
-            description: ProviderSpec defines the desired state of Provider.
             properties:
               credentials:
-                description: Credentials required to authenticate to this provider.
                 properties:
                   secretRef:
-                    description: A SecretRef is a reference to a secret key that contains
-                      the credentials that must be used to connect to the provider.
                     properties:
                       key:
-                        description: The key to select.
                         type: string
                       name:
-                        description: Name of the secret.
                         type: string
                       namespace:
-                        description: Namespace of the secret.
                         type: string
                     required:
                     - key
                     - name
                     type: object
                   source:
-                    description: Source of the provider credentials.
                     enum:
                     - None
                     - Secret
@@ -74,10 +60,8 @@ spec:
                 - source
                 type: object
               provider:
-                description: Provider is the cloud service provider, like `alibaba`
                 type: string
               region:
-                description: Region is cloud provider's region
                 type: string
             required:
             - credentials
